--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,130 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#header {
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#main {
+  margin-left: 0;
+  margin-top: 60px;
+  padding-left: 240px;
 }
 
-.App-link {
-  color: #61dafb;
+.Logo img {
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.HeaderNav .Logo img {
+  height: 60px;
+}
+
+.HeaderNav {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+}
+
+.HeaderNav {
+  background-color: white;
+}
+
+.HeaderNav .brand-logo {
+  color: black;
+}
+
+.HeaderNav .side-nav-trigger {
+  color: black;
+  cursor: pointer;
+}
+
+.HeaderNav .side-nav-trigger:hover {
+  background-color: rgba(38, 38, 38, .15);
+}
+
+.HeaderNav .side-nav-trigger span {
+  padding: 0 32px;
+}
+
+.SideNav {
+  background-color: white;
+  margin-top: 60px;
+  padding: 65px 15px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 240px;
+  height: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.SideNav a {
+  color: #999;
+  padding-right: 8px;
+  display: inline-block;
+}
+
+.top-nav,
+.bottom-nav {
+  padding-left: 40px;
+}
+
+.bottom-nav {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 60px;
+}
+
+.shop-links {
+  padding-top: 20px;
+}
+
+.shop-links .shop-link-header {
+  font-size: 24px;
+}
+
+.shop-links ul {
+  border-left: 2px solid #ddd;
+}
+
+.page-links {
+  color: #999;
+}
+
+.shop-links ul li {
+  font-size: 16px;
+  padding: 0 8px;
+}
+
+@media screen and (min-width: 1025px) {
+  #main,
+  .SideNav {
+    margin-top: 0px;
   }
-  to {
-    transform: rotate(360deg);
+  .HeaderNav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #main {
+    padding-left: 0px;
+  }
+  .SideNav {
+    display: none;
+  }
+  .SideNav .Logo {
+    display: none;
+  }
+  .SideNav .bottom-nav {
+    bottom: initial;
+  }
+  .SideNavMobile {
+    display: block;
+    padding: 0;
   }
 }
