--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body {
 
 .HeaderNav {
   background-color: white;
+  box-shadow: none;
 }
 
 .HeaderNav .brand-logo {
@@ -50,6 +51,7 @@ body {
 }
 
 .SideNav {
+  z-index: 10;
   background-color: white;
   margin-top: 60px;
   padding: 65px 15px;
@@ -150,8 +152,52 @@ body {
   background-color: #f3f3f3;
 }
 
+.OverlayCard {
+  position: relative;
+}
+
+.simple-card-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: transparent;
+  transition: .3s;
+  text-align: center;
+}
+
+.simple-card-overlay:hover {
+  background-color: rgba(255, 255, 255, .95);
+  transition: .3s;
+}
+
+.simple-card-overlay .overlay-text {
+  position: relative;
+  top: 45%;
+  width: 50%;
+  margin: auto;
+  display: none;
+}
+
+.simple-card-overlay:hover .overlay-text {
+  display: block;
+}
+
+.overlay-text .overlay-title {
+  display: block;
+  font-weight: 600; 
+}
+
+.overlay-text .overlay-subtitle {
+  color: #999;
+  font-weight: 600; 
+}
+
 .SimpleCarousel {
   background-color: #f3f3f3;
+}
+
+a.highlight-link {
+  color: red;
 }
 
 img.cover-image {
